--- a/pom.xml
+++ b/pom.xml
@@ -5,13 +5,13 @@
 
   <parent>
     <groupId>edu.rpi.tw.escience</groupId>
-    <artifactId>semantaqua-parent</artifactId>
+    <artifactId>semanteco-parent</artifactId>
     <version>4.0-SNAPSHOT</version>
   </parent>
 
-  <artifactId>semantaqua-common</artifactId>
+  <artifactId>semanteco-common</artifactId>
   <packaging>jar</packaging>
-  <name>semantaqua common</name>
+  <name>semanteco common</name>
 
   <repositories>
     <repository>
