--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,17 @@
       <classifier>with-weakrefs</classifier>
     </dependency>
     <dependency>
+      <groupId>com.hp.hpl.jena</groupId>
+      <artifactId>arq</artifactId>
+      <version>2.8.8</version>
+      <exclusions>
+	<exclusion>
+	  <groupId>com.hp.hpl.jena</groupId>
+	  <artifactId>jena</artifactId>
+	</exclusion>
+      </exclusions>
+    </dependency>
+    <dependency>
       <groupId>org.json</groupId>
       <artifactId>json</artifactId>
     </dependency>
