--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
   <parent>
     <groupId>edu.rpi.tw.escience</groupId>
     <artifactId>semanteco-parent</artifactId>
-    <version>4.1-SNAPSHOT</version>
+    <version>4.1-Final</version>
   </parent>
 
   <artifactId>semanteco-common</artifactId>
