--- a/pom.xml
+++ b/pom.xml
@@ -33,15 +33,23 @@
       <version>3.0.1</version>
     </dependency>
 -->
+<!--
     <dependency>
       <groupId>org.apache.jena</groupId>
       <artifactId>jena-core</artifactId>
       <version>2.6.4</version>
       <classifier>with-weakrefs</classifier>
     </dependency>
+-->
+    <dependency>
+      <groupId>org.apache.jena</groupId>
+      <artifactId>jena-arq</artifactId>
+      <version>2.10.0</version>
+    </dependency>
+<!--
     <dependency>
       <groupId>com.hp.hpl.jena</groupId>
-      <artifactId>arq</artifactId>
+      <artifactId>jena-arq</artifactId>
       <version>2.8.8</version>
       <exclusions>
 	<exclusion>
@@ -50,6 +58,7 @@
 	</exclusion>
       </exclusions>
     </dependency>
+-->
     <dependency>
       <groupId>org.json</groupId>
       <artifactId>json</artifactId>
