--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,11 @@
       <groupId>org.json</groupId>
       <artifactId>json</artifactId>
     </dependency>
+	<dependency>
+      <groupId>com.googlecode.json-simple</groupId>
+      <artifactId>json-simple</artifactId>
+	  <version>1.1</version>
+    </dependency>
     <dependency>
       <groupId>log4j</groupId>
       <artifactId>log4j</artifactId>
